# atligator

./: LICENSE  MANIFEST.in  README.md  setup.cfg
doc/: color-scheme.html
src/: apply_alarms.py  apply_pocket_miner.py  apply_simple_graft.py  download_pdbs_by_scop_query.py  generate_atlas.py  print_binder_residues.py  process_chains.py  select_by_sec_struc.py  visualize_atlas.py  visualize_atlas_stats.py  visualize_pocket.py
src/alarms/: __init__.py  chain_processing.py  construct_selection.py
src/atligator/: __init__.py  acomplex.py  argument_collection.py  atlas.py  base_scorer.py  chain_processing.py  construct_selection.py  deep_atlas.py  deprecated.py  genetic_mutator.py  geometry.py  grafting.py  html_util.py  io_util.py  mutation.py  osprey_util.py  pdb_util.py  pocket_miner.py  prediction_matrix.py  rosetta_util.py  similarity_scoring.py  structure.py  ui_util.py  visualization.py
tests/: big.atlas  test_atlas.py  test_pdb_util.py
