[metadata]
name = atligator
version = 0.0.6
author = Josef Kynast
author_email = josef.kynast@uni-bayreuth.de
description = Atlas based editing of protein interactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hoecker-Lab/atligator
project_urls =
    Bug Tracker = https://github.com/Hoecker-Lab/atligator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    biopython
    numpy>=1.13
    plotly>=5.1.0
    matplotlib
    scipy
    pandas
    tqdm

[options.packages.find]
where = src
